Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added a thisProxyFolder method for the portal, so that calls of it
  defaults to the portal (which is usually what you want).
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- CPSDefault no longer requires CMFCalendar to be installed.