@@ -7,7 +7,9 @@ New features:
   defaults to the portal (which is usually what you want).
 Bug fixes:
 ~~~~~~~~~~
--
+- #1551: getImgTag now can traverse to image object given an absolute url
+
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - CPSDefault no longer requires CMFCalendar to be installed.
+- getImgTag takes an additional key word arg 'img' (OFS.Image object)
